--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -67,7 +67,7 @@ repos:
     hooks:
       - id: post-checkout-local
         name: Post checkout
-        entry: bash -c 'echo `git symbolic-ref HEAD | sed -e s%^refs/heads/%%`'
+        entry: bash -c 'echo $PRE_COMMIT_TO_REF'
         args: [--myarg1=1, --myarg1=2]
         language: system
         always_run: true
