--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,19 +57,23 @@ repos:
         types: [file, python]
   - repo: local
     hooks:
-      - id: post-commit-local
-        name: post commit
-        entry: echo 'commit successed'
-        language: system
-        always_run: true
-        stages: [post-commit]
-  - repo: local
-    hooks:
-      - id: post-checkout-local
-        name: Post checkout
-        entry: bash -c 'echo $PRE_COMMIT_TO_REF'
+      - id: post-checkout
+        name: post-checkout
+        entry: bash -c 'echo `git symbolic-ref HEAD | sed -e s%^refs/heads/%%`'
         args: [--myarg1=1, --myarg1=2]
         language: system
         always_run: true
         verbose: true
         stages: [post-checkout]
+  - repo: local
+    hooks:
+      - id: pre-push
+        name: pre-push
+        entry: bash -c "if echo `git symbolic-ref HEAD | sed s%^refs/heads/%%` | grep -e 'master' -e 'stage' -e 'huga' > /dev/null ; then echo 'このブランチはプッシュしないでください。' && exit 1; fi"
+        args: [--myarg1=1, --myarg1=2]
+        language: system
+        always_run: true
+        stages: [push]
+
+
+# bash -c "if echo `git symbolic-ref HEAD | sed s%^refs/heads/%%` | grep -e 'master' -e 'stage' -e 'production' > /dev/null ; then echo 'このブランチはプッシュしないでください。' && exit 1; fi"
