--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,7 +69,7 @@ repos:
     hooks:
       - id: pre-push
         name: pre-push
-        entry: bash -c "if echo `git symbolic-ref HEAD | sed s%^refs/heads/%%` | grep -e 'master' -e 'stage' -e 'huga' > /dev/null ; then echo 'このブランチはプッシュしないでください。' && exit 1; fi"
+        entry: bash -c "echo $PRE_COMMIT_REMOTE_NAME"
         language: system
         always_run: true
         stages: [push]
