--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,23 @@ services:
       PIP_NO_CACHE_DIR: 'off'
       PIP_DISABLE_PIP_VERSION_CHECK: 'on'
     tty: true
+    stdin_open: true
+
+  db:
+    image: mysql:8.0
+    environment:
+      TZ: 'Asia/Tokyo'
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_DATABASE: 'users'
+    volumes:
+      - mysql-volume:/var/lib/mysql
+      - ./mysql/initdb.d:/docker-entrypoint-initdb.d
+    command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - 33306:3306
+    depends_on:
+      - app
+
+volumes:
+  mysql-volume:
+    driver: local
