--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,10 +7,8 @@ services:
       target: dev
       context: ./
       dockerfile: ./docker/app/Dockerfile
-      args:
-        - ENVIRONMENT=DEV
-    command: sh -c 'python -m pre_commit install --install-hooks --overwrite && python -m uvicorn functions.get.main:app --reload'
+    command: sh -c 'python -m pre_commit install --install-hooks --overwrite && python -m uvicorn functions.get.main:app --reload --host=0.0.0.0 --port 8080'
     volumes:
       - .:/poetry_practice
     ports:
-      - 80:80
+      - 8080:8080
