--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -2,7 +2,6 @@
 
 ARG POETRY_HOME=/opt/poetry
 ARG PYTHON_VERSION=3.9
-ARG ENVIRONMENT
 
 
 FROM python:${PYTHON_VERSION}-buster as builder
@@ -10,7 +9,6 @@ ARG POETRY_HOME
 ARG POETRY_VERSION=1.1.15
 ENV PATH="$POETRY_HOME/bin:$PATH"
 
-# poetryの導入
 RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python - --version $POETRY_VERSION \
     && poetry config virtualenvs.create false
 
@@ -18,7 +16,6 @@ WORKDIR /poetry_practice
 COPY pyproject.toml poetry.lock* ./
 
 RUN --mount=type=cache,target=~/.cache/pypoetry poetry install --no-root
-RUN if [ "${ENVIRONMENT}" = "PROD" ]; then poetry export -f requirements.txt -o requirements.txt --without-hashes; fi
 
 
 # https://github.com/microsoft/vscode-dev-containers/tree/main/containers/python-3
@@ -27,14 +24,11 @@ ARG POETRY_HOME
 ARG USER="vscode"
 ARG GROUP="ccds"
 ENV PATH="$POETRY_HOME/bin:$PATH"
-ARG ENVIRONMENT
-ENV ENVIRONMENT=$ENVIRONMENT
 
 COPY --from=builder --chown=$USER:$GROUP /root/.cache/pypoetry /home/$USER/.cache/pypoetry
 COPY --from=builder --chown=$USER:$GROUP $POETRY_HOME $POETRY_HOME
-# COPY --from=builder --chown=$USER:$GROUP /usr/local/lib/python${PYTHON_VERSION}/site-packages/ /usr/local/lib/python${PYTHON_VERSION}/site-packages/
 
-RUN if ! cat /etc/group | grep -e $GROUP: > /dev/null 2>&1; then groupadd -r $GROUP; fi \
+RUN groupadd -r $GROUP \
     && usermod -a -G $GROUP $USER \
     && umask 0002 && mkdir poetry_practice \
     && chown -R $USER:$GROUP /poetry_practice
