--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
   db:
     image: mysql:8.0
+    container_name: mysql_dev_container
     environment:
       TZ: 'Asia/Tokyo'
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
@@ -21,9 +22,10 @@ services:
     volumes:
       - mysql-volume:/var/lib/mysql
       - ./mysql/initdb.d:/docker-entrypoint-initdb.d
+      - ./mysql/conf.d/my.cnf:/etc/mysql/conf.d/my.cnf
     command: --default-authentication-plugin=mysql_native_password
     ports:
-      - 33306:3306
+      - 13306:3306
     depends_on:
       - app
 
