--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,10 @@
                 "files.autoSaveDelay": 1000,
                 "[python]": {
                     "editor.defaultFormatter": null,
-                    "editor.tabSize": 4
+                    "editor.tabSize": 4,
+                    "editor.codeActionsOnSave": {
+                        "source.organizeImports": true
+                    }
                 },
                 "python.defaultInterpreterPath": "/usr/local/bin/python",
                 "python.languageServer": "Pylance",
@@ -30,7 +33,7 @@
                 "python.linting.lintOnSave": true,
                 // flake8
                 "python.linting.flake8Enabled": true,
-                "python.linting.flake8Path": "${userHome}/.local/bin/flake8",
+                "python.linting.flake8Path": "/usr/local/bin/flake8",
                 "python.linting.flake8Args": [
                     "--max-line-length",
                     "119",
@@ -41,17 +44,17 @@
                 ],
                 // mypy
                 "python.linting.mypyEnabled": true,
-                "python.linting.mypyPath": "${userHome}/.local/bin/mypy",
-                "python.sortImports.path": "${userHome}/.local/bin/isort",
+                "python.linting.mypyPath": "/usr/local/bin/mypy",
+                "python.sortImports.path": "/usr/local/bin/isort",
                 "python.sortImports.args": [
                     "--profile",
                     "black"
                 ],
                 // black
                 "python.formatting.provider": "black",
-                "python.formatting.blackPath": "${userHome}/.local/bin/black",
+                "python.formatting.blackPath": "/usr/local/bin/black",
                 // bandit
-                "python.linting.banditPath": "${userHome}/.local/bin/bandit",
+                "python.linting.banditPath": "/usr/local/bin/bandit",
                 // docstring
                 "autoDocstring.docstringFormat": "google",
                 "remote.containers.defaultExtensions": [
