--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,6 @@ pyproject-flake8 = "^0.0.1-alpha.5"
 bandit = "^1.7.4"
 pre-commit = "^2.20.0"
 pytest = "^7.1.2"
-Sphinx = "^5.1.1"
-sphinx-rtd-theme = "^1.0.0"
-sphinx-pyproject = "^0.1.0"
 taskipy = "^1.10.3"
 
 [build-system]
@@ -87,4 +84,5 @@ diff-black = "task fmt-black --diff --color"
 diff-isort = "task fmt-isort --diff"
 diff = "task diff-black && task diff-isort" 
 bandit = "bandit -c pyproject.toml -r ."
+start = "uvicorn functions.get.main:app --reload --host=0.0.0.0 --port 8081"
 export = "poetry export -f requirements.txt -o requirements.txt --without-hashes"
